--- a/package.json
+++ b/package.json
@@ -9,30 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.2.25",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@auth0/nextjs-auth0": "^3.4.0",
     "@supabase/supabase-js": "^2.39.3",
+    "framer-motion": "^10.18.0",
+    "lucide-react": "^0.344.0",
+    "next": "^14.2.25",
     "openai": "^4.28.0",
     "pdf-parse": "^1.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4",
-    "lucide-react": "^0.344.0",
-    "framer-motion": "^10.18.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.7",
-    "@types/pdf-parse": "^1.1.4",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.35",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.25"
+    "eslint-config-next": "^16.0.3",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
-
