--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.4.0",
+    "@lottiefiles/dotlottie-react": "^0.17.8",
     "@supabase/supabase-js": "^2.39.3",
     "framer-motion": "^10.18.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.344.0",
     "next": "^14.2.25",
     "openai": "^4.28.0",
@@ -29,7 +31,7 @@
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.25",
+    "eslint-config-next": "^16.0.7",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
