--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^16.0.7",
+    "eslint-config-next": "14.2.25",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
